# plugin-sdk-python

./: CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  main.py  pyproject.toml  release-please-config.json  requirements.txt  setup.py
.github/: .kodiak.toml  renovate.json5
.github/workflows/: lint.yml  pr_title.yml  publish.yml  release_pr.yml  unittests.yml
cloudquery/sdk/docs/: generator.py  markdown_templates.py
cloudquery/sdk/message/: __init__.py  read.py  sync.py  write.py
cloudquery/sdk/plugin/: __init__.py  plugin.py
cloudquery/sdk/scalar/: __init__.py  binary.py  bool.py  date32.py  date64.py  float.py  float64.py  int.py  int64.py  json.py  list.py  scalar.py  scalar_factory.py  string.py  timestamp.py  uint.py  uuid.py  vector.py
cloudquery/sdk/scheduler/: __init__.py  scheduler.py  table_resolver.py
cloudquery/sdk/schema/: __init__.py  arrow.py  column.py  resource.py  table.py
cloudquery/sdk/serve/: __init__.py  docs.py  plugin.py
cloudquery/sdk/stateclient/: stateclient.py
cloudquery/sdk/transformers/: __init__.py  openapi.py  transformers.py
cloudquery/sdk/types/: __init__.py  json.py  uuid.py
docs/: overview.md
tests/docs/: test_generator.py
tests/docs/snapshots/: README.md  test_table.md  (+4 more)
tests/scalar/: binary.py  bool.py  float32.py  float64.py  int64.py  list.py  string.py  timestamp.py  uint32.py  uuid.py  vector.py
tests/scheduler/: scheduler.py  table_resolver.py
tests/schema/: test_column.py  test_round_trip.py  test_table.py
tests/serve/: plugin.py
tests/transformers/: openapi.py
tests/types/: json.py
(+6 files in other folders)
